--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,7 +16,7 @@
             <span class="menu-btn__burger dark"></span>
         </div>
         <div class="navbar__logoContainer">
-          <img src="../dist/images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+          <img src="../images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
         </div>
     
             <ul class="navbar__links">
