--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <span class="menu-btn__burger"></span>
   </div>
     <div class="navbar__logoContainer">
-      <img src="../dist/images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+      <img src="../images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
     </div>
 
         <ul class="navbar__links">
@@ -155,7 +155,7 @@
       ">This latest and limited edition collection consists of three iconic silhouettes from the QCK archives, that were deconstructed and rebuilt in the founder's creative vision. The latest design released in 2010 and was one of the fastest and most ambitious design our company has ever produced, taking about six months from ideation to release and is can be bought through certain auctions only. </p>
     </div>
     <div class="ads__image">
-      <img src="../dist/images/cbsluxurysneakers-removebg-preview.png" >
+      <img src="../images/cbsluxurysneakers-removebg-preview.png" >
     </div>
   
 </div>
