--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
         <span class="menu-btn__burger"></span>
     </div>
         <div class="navbar__logoContainer">
-          <img src="../dist/images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+          <img src="../images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
         </div>
     
             <ul class="navbar__links">
