--- a/tierpage.html
+++ b/tierpage.html
@@ -18,7 +18,7 @@
         <span class="menu-btn__burger"></span>
     </div>
     <div class="navbar__logoContainer">
-      <img src="../dist/images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+      <img src="../images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
     </div>
 
         <ul class="navbar__links">
@@ -52,7 +52,7 @@
     <div class="flex__container">
 
     <div class="tier__image">
-        <img class="timage__img" src="../dist/images/trophy bronze.png" height="500"  alt="bronze">
+        <img class="timage__img" src="../images/trophy bronze.png" height="500"  alt="bronze">
         <div class="timage__overlay">
             <div class="timage__title">
                 <h5>BRONZE</h5>
@@ -69,7 +69,7 @@
         </div>
 
     <div class="tier__image">
-        <img class="timage__img" src="../dist/images/trophy gold.jpg"height="500"   alt="gold">
+        <img class="timage__img" src="../images/trophy gold.jpg"height="500"   alt="gold">
         <div class="timage__overlay">
             <div class="timage__title">
                 <h5>GOLD</h5>
@@ -87,7 +87,7 @@
         </div>
 
     <div class="tier__image">
-        <img class="timage__img" src="../dist/images/trophy silver.png" height="500"  alt="silver">
+        <img class="timage__img" src="../images/trophy silver.png" height="500"  alt="silver">
         <div class="timage__overlay">
             <div class="timage__title">
                 <h5>SILVER</h5>
