--- a/products.html
+++ b/products.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <title>Products</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 </head>
 
@@ -17,7 +18,7 @@
         <span class="menu-btn__burger"></span>
     </div>
         <div class="navbar__logoContainer">
-          <img src="../images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+          <img src="./images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
         </div>
     
             <ul class="navbar__links">
