--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +18,7 @@
             <span class="menu-btn__burger dark"></span>
         </div>
         <div class="navbar__logoContainer">
-          <img src="../images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+          <img src="./images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
         </div>
     
             <ul class="navbar__links">
