--- a/tierpage.html
+++ b/tierpage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="./css/main.css">
     <title>Tier Page</title>
 </head>
@@ -18,7 +18,7 @@
         <span class="menu-btn__burger"></span>
     </div>
     <div class="navbar__logoContainer">
-      <img src="../images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+      <img src="./images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
     </div>
 
         <ul class="navbar__links">
@@ -52,7 +52,7 @@
     <div class="flex__container">
 
     <div class="tier__image">
-        <img class="timage__img" src="../images/trophy bronze.png" height="500"  alt="bronze">
+        <img class="timage__img" src="./images/trophy bronze.png" height="500"  alt="bronze">
         <div class="timage__overlay">
             <div class="timage__title">
                 <h5>BRONZE</h5>
@@ -69,7 +69,7 @@
         </div>
 
     <div class="tier__image">
-        <img class="timage__img" src="../images/trophy gold.jpg"height="500"   alt="gold">
+        <img class="timage__img" src="./images/trophy gold.jpg"height="500"   alt="gold">
         <div class="timage__overlay">
             <div class="timage__title">
                 <h5>GOLD</h5>
@@ -87,7 +87,7 @@
         </div>
 
     <div class="tier__image">
-        <img class="timage__img" src="../images/trophy silver.png" height="500"  alt="silver">
+        <img class="timage__img" src="./images/trophy silver.png" height="500"  alt="silver">
         <div class="timage__overlay">
             <div class="timage__title">
                 <h5>SILVER</h5>
