--- a/products/2.html
+++ b/products/2.html
@@ -63,7 +63,7 @@
                             <div class="productDesc__container">
                                 <div class="titleofproduct1">QCK Sneaker 2</div>
                                 <div class="titleofproduct1_text">
-                                    The lightweight cushioning found in this next generation snea   ker takes cues from its predecessors. Take flight on your journey with timeless style and cloud-like heel support.
+                                    The lightweight cushioning found in this next generation sneaker takes cues from its predecessors. Take flight on your journey with timeless style and cloud-like heel support. It's low-cut silhouette adds a clean, streamlined look. The stitched overlays on the upper add heritage style, durability and support.
                                                                         
                                     </div>
                             </div>
