--- a/products/3.html
+++ b/products/3.html
@@ -62,7 +62,7 @@
                     
                             <div class="productDesc__container">
                                 <div class="titleofproduct1">QCK Sneaker 3</div>
-                                <div class="titleofproduct1_text">In a classic black and white colourway, these sneakers are cut from smooth, crisp leather in the upper for a durable wear.</div>
+                                <div class="titleofproduct1_text">In a classic black and white colourway, these sneakers are cut from smooth, crisp leather in the upper for a durable wear. The midsole represents the spine, graduated panels are the muscles, the lace loops are the shoe's ribs and the mesh on the upper is the skin.</div>
                             </div>
                             <div class="productSpec__container">
             
