--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="hero-image">
       <div class="hero-text">
         <h1 style="font-size:50px">QCK</h1>
-        <p class="hero__description">The most luxurious shoes in the world</p>
+        <p class="hero__description">Most comfortable lifestyle shoes</p>
         <p class="hero__description">Gen 3  </p>
       </div> 
       <div class="hero__arrow">
