--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
          <div class="card card0">
            <div class="border_card">
              <h2>QCK 1</h2>
-             <p>Take those first steps on your running journey in the all new QCK 1. Made from at least 20% recycled content by weight, it has a supportive fit and stable ride, with a lightweight feel that easily transitions from your workout to hangout. Your trek begins. Lace up and hit the road.</p>
+             <p>QCK Basketball Shoes</p>
              <div class="icons">
              </div>
            </div>
@@ -67,8 +67,7 @@
         <div class="card card1">
           <div class="border_card">
             <h2>QCK 2</h2>
-            <p>The lightweight cushioning found in this next generation sneaker takes cues from its predecessors. Take flight on your journey with timeless style and cloud-like heel support. 
-            </p>
+            <p>QCK Running Shoes</p>
             <div class="icons">
 
             </div>
@@ -79,7 +78,7 @@
          <div class="card card2">
            <div class="border_card">
              <h2>QCK 3</h2>
-             <p>In a classic black and white colourway, these sneakers are cut from smooth, crisp leather in the upper for a durable wear.</p>
+             <p>QCK Casual Shoes</p>
              <div class="icons">
              </div>
            </div>
