--- a/products/1.html
+++ b/products/1.html
@@ -62,23 +62,24 @@
         
                 <div class="productDesc__container">
                     <div class="titleofproduct1">QCK Sneaker 1</div>
-                    <div class="titleofproduct1_text">Take those first steps on your running journey in the all new QCK 1. Made from at least 20% recycled content by weight, it has a supportive fit and stable ride, with a lightweight feel that easily transitions from your workout to hangout. Your trek begins. Lace up and hit the road.</div>
+                    <div class="titleofproduct1_text">RM280</div>
+                    <div class="productsize">Size available for: <br>Men: UK7 to UK12<br>Women: UK3 to UK7</div>
                 </div>
                 <div class="productSpec__container">
 
-                    <div class="specification">About The Shoe</div>
-                    <div class="specification_text">    
-                        Supersoft foam through the midsole helps cushion your foot with every step. The increased height means a softer sensation as you run.
-The rubber outsole has the traction to help keep your feet gripped to the pavement.
-Skins at the toes and eyelets offer durability.
-A mesh material shows off the internal components at the midfoot and toe.
-<br><br>
-Mesh throughout the upper has a lightweight, breathable feel. The mesh was placed in key zones based on runner feedback, providing you with cooling where it counts.
+                    <div class="specification">About The Shoes</div>
+                    <div class="specification_text">
+                        The QCK 1 is a top-notch performance basketball shoe. Starting off with the cushion, the shoe features a full-length midsole unit along with an extra forefoot unit that sticks out from the bottom.
+                        The midsole of the shoe is the material designed to absorb the forces of running and jumping. As a general principle of physics, the stiffer the midsole material, the better able the player to explode from the floor; the softer this material, the better cushioned the player will be.
+                        Both the cushioning and the traction on these are good for outdoor courts. The lightweight midsole combined with the forefoot unit makes for decent impact protection on both blacktop and concrete. 
+
+                    <br><br>
+                    QCK 1 is a great option if you are looking for a light & stylish shoe with no real weaknesses.
 
                     </div>
                     </div>
                 </div>
-        </div>
+            </div>
     
         <!--Footer-->
 
