--- a/products/1.html
+++ b/products/1.html
@@ -73,7 +73,7 @@
                     <br>
                     <hr>
                     Color<br><br>
-                    <input type="color" name="Blue" id="">
+                    <input type="color" name="Blue" value="#0096FF">
                     <br>
                     <br>
 
@@ -86,7 +86,7 @@
                     <br>
                 
                     <hr>
-                    RM280
+                    RM180
                     </div>
                     
                     </div>
