--- a/products/2.html
+++ b/products/2.html
@@ -71,7 +71,7 @@
                                     <br>
                                     <hr>
                                     Color<br><br>
-                                    <input type="color" name="Red" id="">
+                                    <input type="color" name="" value="#ff0000">
                                     <br>
                                     <br>
 
@@ -84,7 +84,7 @@
                                     <br>
                                 
                                     <hr>
-                                    RM250
+                                    RM150
                                                 </div>
                                                 
                             </div>
