--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
   <meta charset="UTF-8">
-<head>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
   <link rel="stylesheet" href="./css/main.css">
     <style>
-      *{ cursor: url(crosshair.cur,defult;)}
+      /* *{ cursor: url(crosshair.cur,defult;)} */
     </style>
     <title>QCK Sneakers</title>
 
-    <script src="./js/main.js" type="text/javascript"></script>
-    <title>Shoe Web</title>
+    <script src="./js/main.js" ></script>
 </head>
     
    <!-- for example, i added a new line -->
@@ -30,7 +29,7 @@
       <span class="menu-btn__burger"></span>
   </div>
     <div class="navbar__logoContainer">
-      <img src="./images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+      <img src="./images/kkksneaker2.png" alt="" class="logo" height="45" width="45">
     </div>
 
         <ul class="navbar__links">
@@ -157,7 +156,7 @@
       ">This latest and limited edition collection consists of three iconic silhouettes from the QCK archives, that were deconstructed and rebuilt in the founder's creative vision. The latest design released in 2010 and was one of the fastest and most ambitious design our company has ever produced, taking about six months from ideation to release and is can be bought through certain auctions only. </p>
     </div>
     <div class="ads__image">
-      <img src="./images/cbsluxurysneakers-removebg-preview.png" >
+      <img src="./images/cbsluxurysneakers-removebg-preview.png" alt="ads-image">
     </div>
   
 </div>
@@ -268,8 +267,8 @@
                 <div class="footer__col">
                 <p>Join Us</p>
                 <div class="footer__col__input__container">
-                  <input type="email"class="footer__col__input"  placeholder="Enter you email address">
-                  <input type="submit" value="Sign Up"class="footer__col__input__button">
+                  <input type="email" class="footer__col__input"  placeholder="Enter you email address">
+                  <input type="submit" value="Sign Up" class="footer__col__input__button">
   </div>
                 </div>
             <p>©2022,QCK</p>
@@ -277,12 +276,12 @@
         </div>
       </footer>
          
-  <video class="aboutUs__video"width="320" height="160 " controls autoplay requestFullScreen>
+  <video class="aboutUs__video" width="320" height="160" controls autoplay>
     <source src="./videos/newShoes.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video>
+  <script src="./js/menu.js" ></script>
 </body>
-<script src="./js/menu.js" type="text/javascript"></script>
 
 </html>
 
