--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" >
 </head>
 <body>
     <div class="navbar__container">
@@ -18,7 +18,7 @@
             <span class="menu-btn__burger dark"></span>
         </div>
         <div class="navbar__logoContainer">
-          <img src="./images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+          <img src="./images/kkksneaker2.png" alt="" class="logo" height="45" width="45">
         </div>
     
             <ul class="navbar__links">
@@ -127,8 +127,8 @@ The Sneaker Organization testing sessions are based on several parameters applic
             <div class="footer__col">
             <p>Join Us</p>
             <div class="footer__col__input__container">
-                <input type="email"class="footer__col__input"  placeholder="Enter you email address">
-                <input type="submit" value="Sign Up"class="footer__col__input__button">
+                <input type="email" class="footer__col__input"  placeholder="Enter you email address">
+                <input type="submit" value="Sign Up" class="footer__col__input__button">
 </div>
             </div>
         <p>©2022,QCK</p>
@@ -137,7 +137,7 @@ The Sneaker Organization testing sessions are based on several parameters applic
   </footer>
  
 
+  <script src="./js/menu.js"></script>
 </body>
-<script src="./js/menu.js" type="text/javascript"></script>
 
 </html>
