--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
   <title>Products</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
@@ -18,7 +18,7 @@
         <span class="menu-btn__burger"></span>
     </div>
         <div class="navbar__logoContainer">
-          <img src="./images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+          <img src="./images/kkksneaker2.png" alt="" class="logo" height="45" width="45">
         </div>
     
             <ul class="navbar__links">
@@ -127,7 +127,7 @@
           <div class="footer__col">
           <p>Join Us</p>
           <div class="footer__col__input__container">
-            <input type="email"class="footer__col__input"  placeholder="Enter you email address">
+            <input type="email" class="footer__col__input"  placeholder="Enter you email address">
             <input type="submit" value="Sign Up" class="footer__col__input__button">
 </div>
           </div>
@@ -135,7 +135,7 @@
       </div>
   </div>
 </footer>
+<script src="./js/menu.js"></script>
 </body>
-<script src="./js/menu.js" type="text/javascript"></script>
 
 </html>
