--- a/products/2.html
+++ b/products/2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0" />
+<head>    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
@@ -20,7 +20,7 @@
             <span class="menu-btn__burger dark"></span>
         </div>
             <div class="navbar__logoContainer">
-            <img src="../images/kkksneaker2.png"alt="" class="logo" height="45" width="45">
+            <img src="../images/kkksneaker2.png" alt="" class="logo" height="45" width="45">
             </div>
     
                 <ul class="navbar__links">
@@ -51,11 +51,11 @@
             </span>
         <div class="product__container">
             <div class="product__image__container">
-                <iframe src="../models/model2.html" scrolling="no" height="500" title="Iframe Example"></iframe>
+                <iframe src="../models/model2.html"  height="500" title="Iframe Example"></iframe>
                 <div class="image__reminder">
             
                     <p><small>Please wait for a moment for the 3D model to load</small></p>
-                    <p><small>Click <a target="_blank"href="../models/model2.html">here</a> to view in full screen</small></p>
+                    <p><small>Click <a target="_blank" href="../models/model2.html">here</a> to view in full screen</small></p>
                 </div>
             </div>
                         <div class="text__container">
@@ -120,7 +120,7 @@
             <div class="footer__col">
             <p>Join Us</p>
             <div class="footer__col__input__container">
-                <input type="email"class="footer__col__input"  placeholder="Enter you email address">
+                <input type="email" class="footer__col__input"  placeholder="Enter you email address">
                 <input type="submit" value="Sign Up" class="footer__col__input__button">
 </div>
             </div>
@@ -128,6 +128,6 @@
         </div>
     </div>
   </footer>
-  <script src="../js/menu.js" type="text/javascript"></script>
+  <script src="../js/menu.js"></script>
 </body>
 </html>
