--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
          <div class="card card0">
            <div class="border_card">
              <h2>QCK 1</h2>
-             <p>QCK Basketball Shoes</p>
+             <p>The shoe features a full-length midsole unit along with an extra forefoot unit that sticks out from the bottom.</p>
              <div class="icons">
              </div>
            </div>
@@ -67,7 +67,7 @@
         <div class="card card1">
           <div class="border_card">
             <h2>QCK 2</h2>
-            <p>QCK Running Shoes</p>
+            <p>Made from at least 20% recycled content by weight, it has a supportive fit and stable ride, with a lightweight feel that easily transitions from your workout to hangout.</p>
             <div class="icons">
 
             </div>
@@ -78,7 +78,7 @@
          <div class="card card2">
            <div class="border_card">
              <h2>QCK 3</h2>
-             <p>QCK Casual Shoes</p>
+             <p>In a classic black and white colourway, these sneakers are cut from smooth, crisp leather in the upper for a durable wear. </p>
              <div class="icons">
              </div>
            </div>
