--- a/models/model1.html
+++ b/models/model1.html
@@ -7,8 +7,7 @@
 		<link type="text/css" rel="stylesheet" href="main.css">
 	</head>
 
-	<body>
-
+	<body style="overflow:hidden">
 
 		<!-- Import maps polyfill -->
 		<!-- Remove this when import maps will be widely supported -->
