--- a/models/model2.html
+++ b/models/model2.html
@@ -7,7 +7,7 @@
 		<link type="text/css" rel="stylesheet" href="main.css">
 	</head>
 
-	<body>
+	<body style="overflow:hidden">
 
 
 		<!-- Import maps polyfill -->
