--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
   </div>
 
+  <!-- Hero Image -->
+
   <div class="hero-image__container">
     <div class="hero-image">
       <div class="hero-text">
@@ -72,6 +74,7 @@
     </div>
   </div>
   
+  <!-- Carousell  -->
 
   <section class="carousel" aria-label="Gallery">
     <ol class="carousel__viewport" onscroll="changeButtonColor()">
@@ -136,7 +139,8 @@
     </aside>
     </section>
     
-
+ <!-- Advertisement -->
+ 
   <div class="ads-background">
     <div class="ads__text">
       <h1 style="
