--- a/products.html
+++ b/products.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+
+    <!-- Navigation Bar -->
+
     <div class="navbar__container">
       <div class="menu-btn">
         <span class="menu-btn__burger"></span>
@@ -43,7 +46,7 @@
       </div>
     
 
-
+    <!-- Our products -->
     <div class="hero-image2__container">
         <div class="hero2-image">
             <div class="hero2-text">
