--- a/products/1.html
+++ b/products/1.html
@@ -54,6 +54,8 @@
     <iframe src="../models/model1.html" height="500" title="Iframe Example"></iframe>
     <div class="image__reminder">
 
+        <!-- Product Description -->
+
         <p><small>Please wait for a moment for the 3D model to load</small></p>
         <p><small>Click <a target="_blank"  href="../models/model1.html">here</a> to view in full screen</small></p>
     </div>
@@ -144,16 +146,6 @@
   <script src="../js/menu.js" ></script>
 
 </body>
-    
-
-
-
-
-
-
-
-  
-
-
 
 </html>
+
