--- a/products/3.html
+++ b/products/3.html
@@ -53,7 +53,9 @@
             <div class="product__image__container">
                 <iframe src="../models/model3.html" height="500" title="Iframe Example"></iframe>
                 <div class="image__reminder">
-            
+                    
+                    <!-- Product Description -->
+
                     <p><small>Please wait for a moment for the 3D model to load</small></p>
                     <p><small>Click <a target="_blank" href="../models/model3.html">here</a> to view in full screen</small></p>
                 </div>
