--- a/products/2.html
+++ b/products/2.html
@@ -53,6 +53,8 @@
             <div class="product__image__container">
                 <iframe src="../models/model2.html"  height="500" title="Iframe Example"></iframe>
                 <div class="image__reminder">
+
+                    <!-- Product Description -->
             
                     <p><small>Please wait for a moment for the 3D model to load</small></p>
                     <p><small>Click <a target="_blank" href="../models/model2.html">here</a> to view in full screen</small></p>
