--- a/products/1.html
+++ b/products/1.html
@@ -51,7 +51,9 @@
             </span>
         <div class="product__container">
 <div class="product__image__container">
-    <iframe src="../models/model1.html" height="500" title="QCK1"></iframe>
+    <div class="iframe__container">
+        <iframe src="../models/model1.html" title="QCK1"></iframe>
+    </div>
     <div class="image__reminder">
 
         <!-- Product Description -->
@@ -90,7 +92,7 @@
                     RM180
                     </div>
                     
-                    </div>
+                </div>
             </div>
     
         <!--Footer-->
