--- a/products/3.html
+++ b/products/3.html
@@ -51,7 +51,10 @@
             </span>
         <div class="product__container">
             <div class="product__image__container">
+                <div class="iframe__container">
+
                 <iframe src="../models/model3.html" height="500" title="QCK3"></iframe>
+                </div>
                 <div class="image__reminder">
                     
                     <!-- Product Description -->
