--- a/products/3.html
+++ b/products/3.html
@@ -64,8 +64,8 @@
                             <div class="productDesc__container">
                                 <div class="titleofproduct1">QCK Sneaker 3</div>
                                 <div class="specification_text">
-                                    In a classic black and white colourway, these sneakers are cut from smooth, crisp leather in the upper for a durable wear. The midsole represents the spine, graduated panels are the muscles, the lace loops are the shoe's ribs and the mesh on the upper is the skin.
-                                    Freshen up your footwear with these men's QCK 3. Exclusive in the summer release, these sneaks land in a black colourway and are built with a mesh upper for breathability and have synthetic overlays to add structure. They feature a lace fastening with a padded ankle collar for locked in fit and heel pull tab for easy on-and-off. Underfoot is a midsole that delivers lightweight cushioned comfort and a rubber outsole for durability and essential grip. Finished with QCK branding to the heel.
+                                    In a classic black and white colourway, these sneakers are cut from smooth, crisp leather in the upper for a durable wear.
+                                    Freshen up your footwear with these men's QCK 3. Exclusive in the summer release, these sneakers land in a black colourway and are built with a mesh upper for breathability and have synthetic overlays to add structure. They feature a lace fastening with a padded ankle collar for locked in fit and heel pull tab for easy on-and-off. Underfoot is a midsole that delivers lightweight cushioned comfort and a rubber outsole for durability and essential grip. Finished with QCK branding to the heel.
                                     <br><br>
                                     With a hard-wearing rubber outsole for standout traction, these trainers are finished off with iconic white stripes embroidered to the sidewalls.
                                     <br>
